--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -247,7 +247,7 @@
 			<h:panelGroup layout="block" id="seccion3">
 				<div>
 						<!-- Change or deletion of the name attributes in the input tag will lead to empty values on record submission-->
-						<form action='https://forms.zohopublic.com/eduspheresolutions/form/FreeTrialRequest/formperma/RZf6AOC-dNPzb0JhVwafln9HgdNqoek1HognqWVBYNg/htmlRecords/submit' name='form' id='form' method='POST' accept-charset='UTF-8' enctype='multipart/form-data'>
+						<form  action='https://forms.zohopublic.com/eduspheresolutions/form/FreeTrialRequest/formperma/RZf6AOC-dNPzb0JhVwafln9HgdNqoek1HognqWVBYNg/htmlRecords/submit' target="respuesta-formulario" name='form' id='form' method='POST' accept-charset='UTF-8' enctype='multipart/form-data'>
 							<input type="hidden" name="zf_referrer_name" value=""/><!-- To Track referrals , place the referrer name within the " " in the above hidden input field -->
 							<input type="hidden" name="zf_redirect_url" value=""/><!-- To redirect to a specific page after record submission , place the respective url within the " " in the above hidden input field -->
 							<input type="hidden" name="zc_gad" value=""/><!-- If GCLID is enabled in Zoho CRM Integration, click details of AdWords Ads will be pushed to Zoho CRM -->
@@ -257,7 +257,7 @@
 								<label>Nombre</label>
 								<div class="input-nombre">
 									<input type="text" required=""  placeholder="First" maxlength="255" name="Name_First" fieldType="7" />
-									<input type="text" required="" placeholder="last" maxlength="255" name="Name_Last" fieldType="7" />
+									<input type="text" required="" placeholder="Last" maxlength="255" name="Name_Last" fieldType="7" />
 								</div>
 							</div>
 							<!--Phone-->
@@ -705,12 +705,21 @@
 			</div>
 <!--			<h5>esquadron</h5>-->
 		</footer>
+		<iframe src="" id="respuesta-form" name="respuesta-formulario" frameborder="0" style="display: none;" width="600" height="600">
+
+		</iframe>
 	</div>
 <!--	<script type="application/javascript" src="https://sdk.amazonaws.com/js/aws-sdk-2.585.0.min.js"></script>-->
 	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/landing/landing.js"/>
 	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/TweenMax.min.js"/>
 	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/landing/animacion-espacio.js"/>
-    <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/smtp.js"/>
+	<script type="application/javascript" >
+		let form = document.getElementById('form');
+		form.addEventListener('submit',(evt)=>{
+			form.reset();
+		})
+	</script>
+<!--    <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/smtp.js"/>-->
 <!--	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/email.js"/>-->
 <!--	<h:outputScript library="js" name="email.js"/>-->
 </h:body>
