desarrollo de bloquear actividad- faltan estilos, muestra grado y grupo en la lista de tareas en la vista del profesor

--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -18,6 +18,7 @@
                     <li class="uk-active"><a><h:outputText pt:uk-icon="home" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.dashboard']}</span></a></li>
                 </ul>
             </li>
+            <li><h:link outcome="actividad" value="actividades"/></li>
         </ul>
     </ui:define>
 
