se suben cambios del email en la landing

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -15,6 +15,9 @@
 <!--	<meta property="o"-->
 	<link  rel="shortcut icon"  href="#{resource['img/favicon.ico']}"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+	<meta name="description" content="Somos la mejor videoteca digital con actividades interactivas, descargables e imprimibles. ¡Tus alumnos  aprenderán con sus videos favoritos de Youtube en un ambiente 100% académico! +1000 actividades. Recursos para Grammar. Perfecto para laboratorios o homeschool."/>
+	<meta name="keywords" content="ELT,englishworksheet,grammarworksheet,videoclass,homeschool,english,Plataforma educativa,inglés,flashcards"/>
+
 <!--	<link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/estilos-landing.css"/>-->
 	<h:outputStylesheet library="css" name="estilos-landing.css"/>
 	<!-- Facebook Pixel Code -->
@@ -245,6 +248,7 @@
 		</section>
 		<div>
 			<h:panelGroup layout="block" id="seccion3">
+<!--				https://forms.zohopublic.com/eduspheresolutions/form/FreeTrialRequest/formperma/RZf6AOC-dNPzb0JhVwafln9HgdNqoek1HognqWVBYNg/htmlRecords/submit-->
 				<div>
 						<!-- Change or deletion of the name attributes in the input tag will lead to empty values on record submission-->
 						<form  action='https://forms.zohopublic.com/eduspheresolutions/form/FreeTrialRequest/formperma/RZf6AOC-dNPzb0JhVwafln9HgdNqoek1HognqWVBYNg/htmlRecords/submit' target="respuesta-formulario" name='form' id='form' method='POST' accept-charset='UTF-8' enctype='multipart/form-data'>
@@ -714,13 +718,10 @@
 	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/TweenMax.min.js"/>
 	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/landing/animacion-espacio.js"/>
 	<script type="application/javascript" >
-		let form = document.getElementById('form');
-		form.addEventListener('submit',(evt)=>{
-			form.reset();
-		})
+
 	</script>
-<!--    <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/smtp.js"/>-->
+    <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/smtp.js"/>
 <!--	<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/email.js"/>-->
-<!--	<h:outputScript library="js" name="email.js"/>-->
+	<h:outputScript library="js" name="email.js"/>
 </h:body>
 </html>
