se sube filtro por grupos modulo profesor, filtro tabla heredar y estilos actividades y filtro modulo administrador tambien meta redes sociales en landing

--- a/tecolotl-web/src/main/webapp/administracion/actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/actividad.xhtml
@@ -10,14 +10,41 @@
         <f:viewAction action="#{administraActividadControlador.inicio}"/>
     </f:metadata>
     <ui:define name="contenido">
-        <h:form id="formulario-actividad">
-            <h:inputHidden id="entrada-actividad" value="#{administraActividadControlador.actividad}"/>
-            <h:commandButton onclick="return seleccionActividad(event)" value="desactivar" action="#{administraActividadControlador.bloquea}"/>
-        </h:form>
-        <ui:repeat value="#{administraActividadControlador.actividadModeloLista}" var="actividadModelo">
-            <img src="https://i.ytimg.com/vi/${actividadModelo.idVideo}/mqdefault.jpg"/>
-            <input type="radio" id="${actividadModelo.idVideo}" name="actividad" />"
-        </ui:repeat>
+        <div class="uk-margin-medium-bottom uk-flex uk-flex-between">
+            <h:form id="formulario-actividad" styleClass="uk-display-inline-block" >
+                <h:inputHidden id="entrada-actividad" value="#{administraActividadControlador.actividad}"/>
+                <h:commandButton id="desactivar" styleClass="uk-button uk-button-primary" onclick="return seleccionActividad(event)" value="desactivar" action="#{administraActividadControlador.bloquea}"/>
+            </h:form>
+            <div>
+                <label for="actividades-canceladas">Videos caidos:</label>
+                <select id="actividades-canceladas" class="uk-select" style="width: 250px;">
+                    <option value="all">Ver actividades</option>
+                </select>
+            </div>
+            <div class="uk-display-inline-block ">
+                <form class="uk-search uk-search-default">
+                    <input class="uk-search-input" type="search" placeholder="Search..."/>
+                </form>
+                <button class="uk-button uk-button-primary" style="color: white;"> <h:panelGroup styleClass="uk-icon"  pt:uk-icon="search" /></button>
+            </div>
+        </div>
+        <div id="datos-conteo-actividades" class="uk-margin-bottom">
+            <span class="uk-margin-medium-right uk-text-bold">Total videos: <span/></span><span class="uk-text-bold">Videos desactivados: <span/></span>
+        </div>
+        <div class="contenido-actividades">
+            <ui:repeat value="#{administraActividadControlador.actividadModeloLista}" var="actividadModelo">
+                <div class="card-actividades-bloqueadas ${!actividadModelo.estatus ? 'card-adtividad-desactivado':''}" data-estatus="${actividadModelo.estatus}">
+                    <div class="card-actividades-bloqueadas-titulos">
+                        <label class="switch">
+                            <input type="radio" id="${actividadModelo.idVideo}" name="actividad" class="uk-checkbox" />
+                            <span class="slider round"/>
+                        </label>
+                    </div>
+                    <img src="https://i.ytimg.com/vi/${actividadModelo.idVideo}/mqdefault.jpg"/>
+                    <h6 class="uk-text-center ">${actividadModelo.idVideo}</h6>
+                </div>
+            </ui:repeat>
+        </div>
     </ui:define>
     <ui:define name="file-js">
         <h:outputScript library="js" name="administracion/actividad.js"/>
