--- a/tecolotl-web/src/main/webapp/administracion/heredar-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/heredar-alumno.xhtml
@@ -130,8 +130,188 @@
                 </div>
             </div>
         </div>
+        <h5>Buscar Alumno</h5>
+        <div  class="uk-margin-medium-bottom">
+            <div style="height: 650px" class="uk-overflow-auto uk-margin-medium-top">
+                <table class="uk-table uk-table-divider uk-table-hover" nah-filtrado="Grupo,Grado,Nombre,Apellido Paterno">
+                <thead class="uk-background-primary">
+                <tr>
+                    <th><span class="letra-titulo">Nombre</span></th>
+                    <th><span class="letra-titulo">Apellido Paterno</span></th>
+                    <th><span class="letra-titulo">Apellido Materno</span></th>
+                    <th><span class="letra-titulo">Grado</span></th>
+                    <th><span class="letra-titulo">Grupo</span></th>
+                    <th><span class="letra-titulo">Ciclo escolar</span></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Mauricio</td>
+                    <td>Garcia</td>
+                    <td>Gonzalez</td>
+                    <td>1</td>
+                    <td>A</td>
+                    <td>2020-2021</td>
+                </tr>
+                <tr>
+                    <td>Mauricio</td>
+                    <td>Tepox</td>
+                    <td>Mejia</td>
+                    <td>1</td>
+                    <td>B</td>
+                    <td>2020-2021</td>
+                </tr>
+                <tr>
+                    <td>Roberto</td>
+                    <td>Garcia</td>
+                    <td>Ramirez</td>
+                    <td>1</td>
+                    <td>A</td>
+                    <td>2020-2021</td>
+                </tr>
+                <tr>
+                    <td>Susana</td>
+                    <td>Suarez</td>
+                    <td>Maldonado</td>
+                    <td>1</td>
+                    <td>A</td>
+                    <td>2020-2021</td>
+                </tr>
+                <tr>
+                    <td>Maria</td>
+                    <td>Montes</td>
+                    <td>Clavijero</td>
+                    <td>1</td>
+                    <td>B</td>
+                    <td>2021-2022</td>
+                </tr>
+                <tr>
+                    <td>Jaime</td>
+                    <td>Garcia</td>
+                    <td>Loaiza</td>
+                    <td>1</td>
+                    <td>C</td>
+                    <td>2021-2022</td>
+                </tr>
+                <tr>
+                    <td>Mario</td>
+                    <td>Bustillo</td>
+                    <td>Diaz</td>
+                    <td>2</td>
+                    <td>B</td>
+                    <td>2020-2021</td>
+                </tr>
+                <tr>
+                    <td>Antonio</td>
+                    <td>Guzman</td>
+                    <td>Momo</td>
+                    <td>2</td>
+                    <td>A</td>
+                    <td>2020-2021</td>
+                </tr>
+                <tr>
+                    <td>Antonia</td>
+                    <td>Gimenez</td>
+                    <td>Sanchez</td>
+                    <td>2</td>
+                    <td>A</td>
+                    <td>2020-2021</td>
+                </tr>
+                <tr>
+                    <td>Ramira</td>
+                    <td>Rodriguez</td>
+                    <td>Panfila</td>
+                    <td>1</td>
+                    <td>B</td>
+                    <td>2021-2022</td>
+                </tr>
+                <tr>
+                    <td>Joaquin</td>
+                    <td>Sanchez</td>
+                    <td>Calderon</td>
+                    <td>3</td>
+                    <td>B</td>
+                    <td>2020-2021</td>
+                </tr>
+                <tr>
+                    <td>Panfila</td>
+                    <td>Martinez</td>
+                    <td>Zonteco</td>
+                    <td>2</td>
+                    <td>B</td>
+                    <td>2020-2021</td>
+                </tr>
+                <tr>
+                    <td>Joaquin</td>
+                    <td>Clavijero</td>
+                    <td>Tenzocomani</td>
+                    <td>1</td>
+                    <td>A</td>
+                    <td>2020-2021</td>
+                </tr>
+                <tr>
+                    <td>Anastasia</td>
+                    <td>Sanchez</td>
+                    <td>Guzman</td>
+                    <td>2</td>
+                    <td>A</td>
+                    <td>2021-2022</td>
+                </tr>
+                <tr>
+                    <td>Ramses</td>
+                    <td>Fuentes</td>
+                    <td>Valedor</td>
+                    <td>1</td>
+                    <td>B</td>
+                    <td>2020-2021</td>
+                </tr>
+                <tr>
+                    <td>Maximo</td>
+                    <td>Decimo</td>
+                    <td>Meridio</td>
+                    <td>1</td>
+                    <td>B</td>
+                    <td>2020-2021</td>
+                </tr>
+                <tr>
+                    <td>Plutarco</td>
+                    <td>Elias</td>
+                    <td>Calles</td>
+                    <td>3</td>
+                    <td>B</td>
+                    <td>2020-2021</td>
+                </tr>
+                <tr>
+                    <td>Frida</td>
+                    <td>A.</td>
+                    <td>Calo</td>
+                    <td>2</td>
+                    <td>B</td>
+                    <td>2021-2022</td>
+                </tr>
+                <tr>
+                    <td>Bronco</td>
+                    <td>Oro</td>
+                    <td>Caballo</td>
+                    <td>1</td>
+                    <td>A</td>
+                    <td>2020-2021</td>
+                </tr>
+                <tr>
+                    <td>Plutarco</td>
+                    <td>Garcia</td>
+                    <td>Camaleon</td>
+                    <td>1</td>
+                    <td>B</td>
+                    <td>2020-2021</td>
+                </tr>
+                </tbody>
+            </table>
+            </div>
+        </div>
     </ui:define>
     <ui:define name="file-js">
         <h:outputScript library="js" name="/administracion/heredar-alumno.js"/>
+        <h:outputScript library="js" name="/administracion/filtro-tabla.js"/>
     </ui:define>
 </ui:composition>
