--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -17,6 +17,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 	<meta name="description" content="Somos la mejor videoteca digital con actividades interactivas, descargables e imprimibles. ¡Tus alumnos  aprenderán con sus videos favoritos de Youtube en un ambiente 100% académico! +1000 actividades. Recursos para Grammar. Perfecto para laboratorios o homeschool."/>
 	<meta name="keywords" content="ELT,englishworksheet,grammarworksheet,videoclass,homeschool,english,Plataforma educativa,inglés,flashcards"/>
+	<meta property="og:type" content="article"/>
+	<meta property="og:title" content="E-squadron"/>
+	<meta property="og:description" content="Somos la mejor videoteca digital con actividades interactivas, descargables e imprimibles. ¡Tus alumnos  aprenderán con sus videos favoritos de Youtube en un ambiente 100% académico! +1000 actividades. Recursos para Grammar. Perfecto para laboratorios o homeschool."/>
+	<meta property="og:url" content="https://www.e-squadron.com.mx/"/>
+	<meta property="og:image" content="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/5.png"/>
 
 <!--	<link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/estilos-landing.css"/>-->
 	<h:outputStylesheet library="css" name="estilos-landing.css"/>
