Cambio de resource boulder profesor.properties/index.xhtml traduccion de formulario

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -265,24 +265,24 @@
 							<div>
 								<label>Nombre</label>
 								<div class="input-nombre">
-									<input type="text" required=""  placeholder="First" maxlength="255" name="Name_First" fieldType="7" />
-									<input type="text" required="" placeholder="Last" maxlength="255" name="Name_Last" fieldType="7" />
+									<input type="text" required=""  placeholder="Nombre" maxlength="255" name="Name_First" fieldType="7" />
+									<input type="text" required="" placeholder="Apellidos" maxlength="255" name="Name_Last" fieldType="7" />
 								</div>
 							</div>
 							<!--Phone-->
 							<div>
 								<label>Whatsapp</label>
-								<input type="text" required="" placeholder="Number" compname="PhoneNumber" name="PhoneNumber_countrycode" phoneFormat="1" isCountryCodeEnabled="false" maxlength="20" value="" fieldType="11" id="international_PhoneNumber_countrycode" />
+								<input type="text" required="" placeholder="Número" compname="PhoneNumber" name="PhoneNumber_countrycode" phoneFormat="1" isCountryCodeEnabled="false" maxlength="20" value="" fieldType="11" id="international_PhoneNumber_countrycode" />
 							</div>
 							<!--Email-->
 							<div>
-								<label>Email</label>
+								<label>E-mail</label>
 								<input type="text" maxlength="255" name="Email" value="" required="" fieldType="9" />
 							</div>
 							<!--Dropdown-->
 							<div>
 								<label>Nivel en el que enseño</label>
-								<select name="Dropdown" required=""><option selected="true" value="-Select-">-Select-</option>
+								<select name="Dropdown" required=""><option selected="true" value="-Seleccionar-">-Seleccionar-</option>
 									<option value="Preescolar">Preescolar</option>
 									<option value="Primaria">Primaria</option>
 									<option value="Secundaria">Secundaria</option>
@@ -302,12 +302,12 @@
 							<div class="contenedor-input">
 								<label>Direccion del colegio</label>
 								<div>
-									<input style="margin-bottom: 7px" required="" type="text" maxlength="255" placeholder="Street Address" name="Address_AddressLine1"/>
-									<input style="margin-bottom: 7px" required="" type="text" maxlength="255" placeholder="Address Line 2" name="Address_AddressLine2"/>
-									<input style="margin-bottom: 7px" required="" type="text" maxlength="255" placeholder="City" name="Address_City"/>
-									<input style="margin-bottom: 7px" required="" type="text" maxlength="255" placeholder="State/Region/Province" name="Address_Region"/>
-									<input style="margin-bottom: 7px" required="" type="text" maxlength="255" placeholder="Postal / Zip Code" name="Address_ZipCode"/>
-									<select required="" name="Address_Country"><option>-Select-</option>
+									<input style="margin-bottom: 7px" required="" type="text" maxlength="255" placeholder="Calle" name="Address_AddressLine1"/>
+									<input style="margin-bottom: 7px" required="" type="text" maxlength="255" placeholder="Calle y número" name="Address_AddressLine2"/>
+									<input style="margin-bottom: 7px" required="" type="text" maxlength="255" placeholder="Ciudad" name="Address_City"/>
+									<input style="margin-bottom: 7px" required="" type="text" maxlength="255" placeholder="Estado" name="Address_Region"/>
+									<input style="margin-bottom: 7px" required="" type="text" maxlength="255" placeholder="Codigo postal" name="Address_ZipCode"/>
+									<select required="" name="Address_Country"><option>-Seleccionar-</option>
 									<option>&Aring;land Islands</option>
 									<option>Afghanistan</option>
 									<option>Akrotiri</option>
@@ -600,7 +600,7 @@
 									</div>
 								</div>
 							</div>
-							<button type="submit">Submit</button></form>
+							<button type="submit">Enviar</button></form>
 				</div>
 				<div>
 				<h:panelGroup layout="block">
