Carga de forma ajax al heredar alumno

--- a/tecolotl-web/src/main/webapp/administracion/heredar-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/heredar-alumno.xhtml
@@ -123,8 +123,9 @@
                         <div class="uk-card-footer uk-flex uk-flex-right">
                             <h:commandButton value="heredar"
                                              styleClass="uk-button uk-button-primary"
-                                             disabled="${empty heredarAlumnoControlador.alumnoModeloLista}"
-                                             action="#{heredarAlumnoControlador.hereda}"/>
+                                             disabled="${empty heredarAlumnoControlador.alumnoModeloLista}">
+                                <f:ajax execute="@form" listener="#{heredarAlumnoControlador.hereda}" render="@form formulario-grupo"/>
+                            </h:commandButton>
                         </div>
                     </h:form>
                 </div>
