--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -52,7 +52,6 @@
                                 <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom ">
                                     <span class="uk-text-bold uk-text-capitalize">#{profesor['dashboard.email']}: </span>#{profesorControlador.profesorModelo.correoEletronico}
                                 </p>
-                                <ui:remove><p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-primary">Edit Profile: </span></p></ui:remove>
                             </div>
                         </div>
                     </div>
@@ -90,7 +89,7 @@
                                                {datosGrupo();
                                                visualizar();}
                                         }"
-                                        render="formulario-grupo:fecha-fin formulario-grupo:fecha-inicio formulario-grupo:descripcion formulario-tabla:tabla-grupo graficas"/>
+                                        render="formulario-grupo:fecha-fin formulario-grupo:fecha-inicio formulario-grupo:descripcion formulario-tabla graficas"/>
                             </h:selectOneMenu>
                         </div>
                     </div>
